--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
     <uses-feature
         android:name="android.hardware.touchscreen"
         android:required="false" />
-
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -34,10 +34,11 @@
             android:theme="@style/DialogTheme" />
         <activity
             android:name=".ui.SearchActivity"
+            android:exported="true"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:stateNotNeeded="true"
-            android:excludeFromRecents="true"
+            android:excludeFromRecents="false"
             android:configChanges="orientation">
 
             <meta-data
