--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,13 @@ buildscript {
 
     repositories {
         jcenter()
+        google()
     }
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'de.mobilej.unmock:UnMockPlugin:0.6.0'
 
         classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.2.2'
