--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,19 +11,20 @@ repositories {
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 27
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         versionCode 68
         versionName "6.8"
         // this can be 5 but for assertj this fails - only a problem for tests
         // http://stackoverflow.com/questions/25753751/increase-minsdk-for-androidtest
-        minSdkVersion 9
-        targetSdkVersion 26
+        minSdkVersion 15
+        targetSdkVersion 27
         applicationId "org.ligi.fast"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         archivesBaseName = "Fast-$versionName"
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -87,6 +88,8 @@ android {
         exclude 'asm-license.txt'
         exclude 'LICENSE'
         exclude 'NOTICE'
+        exclude 'LICENSE-EPL-1.0.txt'
+        exclude 'LICENSE-EDL-1.0.txt'
     }
 }
 
@@ -97,6 +100,13 @@ dependencies {
     androidTestCompile 'com.android.support:support-annotations:26.0.2'
     androidTestCompile 'com.squareup.spoon:spoon-client:1.7.1'
     androidTestCompile 'com.squareup.assertj:assertj-android:1.2.0'
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation project(':dashbench-debug')
+
+    // https://mvnrepository.com/artifact/org.eclipse.collections/eclipse-collections
+    compile group: 'org.eclipse.collections', name: 'eclipse-collections', version: '7.0.0'
+    // https://mvnrepository.com/artifact/org.eclipse.collections/eclipse-collections-api
+    compile group: 'org.eclipse.collections', name: 'eclipse-collections-api', version: '7.0.0'
 
     testCompile 'com.squareup.assertj:assertj-android:1.2.0'
     testCompile 'junit:junit:4.12'
